[gd_scene load_steps=3 format=2]

[ext_resource path="res://interfaces/exit_button.gd" type="Script" id=1]
[ext_resource path="res://tilesets/x_out_red.png" type="Texture" id=2]

[node name="ExitButton" type="TextureButton"]
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 2 )
expand = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="focus_entered" from="." to="." method="_on_ExitButton_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_ExitButton_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_ExitButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_ExitButton_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_ExitButton_pressed"]
